--- a/source/_posts/2018-04-25-README.md
+++ b/source/_posts/2018-04-25-README.md
@@ -18,6 +18,7 @@ tags: 闲谈
 <font face="微软雅黑" size=4 style="line-height:4px;">**分享**&nbsp;</font><font size=3px color="#555555">分享自己所了解的知识</font>
 <font face="微软雅黑" size=4 style="line-height:4px;">**交流**&nbsp;</font><font size=3px color="#555555">希望在这个圈子中结识到朋友</font>  
 
+<!-- more -->
 ## 内容
 <font size=3px color="#555555">本身所学的就是Android，工作也是更多接触Framework的知识，因此我的博客大部分内容都是Android相关，同时也会写一些Java的内容。当然不仅仅是技术方面，也会分享一些生活感悟。</font>
 
