2018-04-27:update article_2018-04-25-README

--- a/source/_posts/2018-04-25-README.md
+++ b/source/_posts/2018-04-25-README.md
@@ -1,11 +1,11 @@
 ---
+title: 我的第一篇Github博客
 urlname: first_blog
 categories:
 - chat
+date: 2018-04-25
 tags: 闲谈
 ---
-
-# <center>我的第一篇Github博客<center>
 
 ## 前言
 <font size=3px color="#555555">2018都过去一个季度了，才想起来弄个个人博客，这是我的第一篇Github博客，之前都是在csdn上写，当然产量和产值都不高，不过以后我会一直坚持写。</font>
