2018-05-02:modify article title

--- a/source/_posts/2018-05-02-JAVA-理解多态.md
+++ b/source/_posts/2018-05-02-JAVA-理解多态.md
@@ -1,5 +1,5 @@
 ---
-title: JAVA-对多态的理解
+title: JAVA-理解多态
 urlname: java_understanding_polymorphism
 categories:
 - java
@@ -22,6 +22,7 @@ tags: [JAVA,多态]
 6. 简化性
 
 多态存在的三个必要条件：继承、重写、父类引用指向子类对象
+<!-- more -->
 
 多态的形式：
 ```java
