2018-05-29:modify article samba部署

--- a/source/_posts/2018-05-26-samba部署.md
+++ b/source/_posts/2018-05-26-samba部署.md
@@ -127,6 +127,7 @@ vaild users = user1
 -rwxrwxrwx (777) -- 所有用户都有读、写、执行权限。
 ```
 </br>
+
 # 四、重启samba服务
 ```
 sudo service smbd restart
@@ -134,7 +135,9 @@ sudo service smbd restart
 sudo /etc/init.d/smbd restart
 ```
 </br>
-# 五、Windows访问
+
+# 五、客户端连接
+## 1、Windows
 ```
 我的电脑 --> 映射网络驱动器 --> 选择驱动器，文件夹填入 \\IP\share dir
 --> 输入刚才创建的用户名密码
@@ -142,7 +145,25 @@ sudo /etc/init.d/smbd restart
 ![samba_map_network_driver](../images/2018-05-26_samba_map_network_driver.png)  
 
 ![samba_map_network_driver](../images/2018-05-26_samba_map_network_folder.png)  
+## 2、Linux
+```
+1、 安装 cifs
+sudo apt-get install cifs-utils
+2、列出远程目录
+smbclient -L ip_address -Uadministrator (ip_address 自行替换)
+3、本地新建一个目录用来挂载远程目录
+mkdir -p /home/jiangyb/samba
+4、修改 /etc/fstab
+//ip_address/share_dir/ /local_dir/ cifs defaults, username=user, password=pwd,
+uid=500, gid=500
+例：
+//172.16.70.223/jiangyb /home/jiangyb/samba cifs defaults, username=jiangyb,
+password=jiangyb, uid=500, gid=500
+5、 挂载
+sudo mount -a
+```
 </br>
+
 # 六、其他命令
 ## 1、查看已启用的samba账户
 ```
